# uralelectro-bot

./: .docker.env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: back.Dockerfile  dev.docker-compose.yml
sql/: test.data.sql  test.data2.sql  test.data3.sql
src/: alembic.ini
src/app/: base.py  main.py  settings.py
src/app/admin/: auth.py  base.py
src/app/connectors/: pg_database.py
src/app/dependencies/: __init__.py
src/app/dto/: base.py
src/app/exceptions/: base.py  error_handlers.py  user.py
src/app/middlewares/: base.py
src/app/models/: __init__.py  base.py  mixins.py
src/app/routers/: base.py  index.py
src/app/uow/: base.py  order_uow.py  user_uow.py
src/bot/: main.py  settings.py
src/bot/callback/: product.py
src/bot/core/: loader.py
src/bot/database/: pg_database.py
src/bot/dto/: order.py  product.py  user.py
src/bot/handlers/: __init__.py  category.py  faq.py  info.py  menu.py  order.py  product.py  start.py  support.py  truble.py
src/bot/keyboards/: default_commands.py
src/bot/middlewares/: __init__.py  channel_subscribe.py  database.py  logging.py
src/bot/repositories/: category.py  order.py  product.py  user.py
src/bot/services/: category_service.py  delivery_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
src/bot/tests/: test_delivery_service.py
src/bot3/: main.py
src/bot3/cache/: redis.py
src/bot3/core/: loader.py
src/bot3/filters/: admin.py
src/bot3/handlers/: __init__.py  export_users.py  info.py  menu.py  start.py  support.py
src/bot3/middlewares/: __init__.py  auth.py  database.py  i18n.py  throttling.py
src/bot3/utils/: users_export.py
src/migrations/: env.py
src/migrations/versions/: 2025-04-19_17-44_init.py  (+9 more)
(+54 files in other folders)
